# ServerPal

./: .gitignore  pyproject.toml
src/: bot.py  main.py  rcon.yaml.example  start-srv.py
src/config/: __init__.py
src/helpers/: __init__.py  rcon.py  types.py
src/tasks/: autosleep.py  discord.py
