[project]
name = "ServerPal"
version = "0.0.1"
description = "A companion bot for PalWorld servers"
authors = [
    {name = "Private Butts", email = "randybuttsii@gmail.com"},
]
dependencies = [
    "discord-py>=2.3.2",
    "strictyaml>=1.7.3",
    "structlog>=24.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

